--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Pykhova A. CV</title>
 </head>
 <body>
-    
+    <section class="cv-container">
+        <div class="image-container">
+            <img src="src/7c3904926f1c9475b3aae943fbbc--materialy-dlya-tvorchestva-fotofon-doski-svetlye-40h40-sm.jpg">
+        </div>
+        <div class="text-container">
+           <h1>Pykhova A. - CV</h1> 
+           <img src="src/IUntB6BNuHY.jpg" alt="Photo">
+           <div class="text">
+               <ol>
+                   <li><strong>Name:</strong> Alisa Pykhova</li>
+                   <li><strong>Contacts:</strong> email: apykhova@gmail.com; mobile/telegram: +79312066110; Skype:tsumiri</li>
+                   <li><strong>Summary:</strong> Last year I've desided that there is a need for change, so I chose to take a new
+                     step and become a Front-End developer. This is what amuses me in front-end: you can see the result of your 
+                     work as soon as you fix or change it. Although my Back-End developer-friends say that 'moving pixels' 
+                     around is quite boring, I am never bored with this process. It encourages me to learn more and more every 
+                     day.</li>
+                   <li><strong>Skills:</strong> basic HTM/CSS skills, including Flexbox and Grid, basic JS skills, basic Flutter knowledge</li>
+                   <li><strong>Code example:</strong> <a href="https://github.com/TsuShinra/html_course_1/">HTML page example</a>
+                    <a href="https://github.com/TsuShinra/Test_project_for_Leonid/">Flutter code example</a></li>
+                   <li><strong>Experience:</strong> HTML course project and several layouts I did for fun for my hobby projects</li>
+                   <li><strong>Education:</strong>  Got admitted to Faculty of Computational Mathematics and Cybernetics in 2003, 
+                    dropped after 1 year, transfering to Sociology faculty, which I succesfully graduated in 2009. 
+                    After that was working mainly in localization industry, in LogrusIT LLC. Now I plan to move on and return 
+                    to my long-forgotten programming dreams.</li>
+                   <li><strong>Languages:</strong> English is my main spoken language at work nowadays, so I'm a frequent and 
+                    confident user, probably the level is C1, but I never took any tests after University, as there was no need. 
+                    I also speak and understand basic French (B1), and have basic knowledge of Spanish and Korean.</li>
+               </ol>
+           </div>
+        </div>
+    </section>
+    <footer><a href="https://github.com/TsuShinra/">GitHub : TsuShinra</a>, 2021, <img class="rs-logo" src="src/rs_school_js.svg"><a href="https://rs.school/js/">JavaScript/Front-end</a> </footer> 
 </body>
 </html>
