--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 </head>
 <body>
     <section class="cv-container">
-        <div class="image-container">
-            <img src="src/7c3904926f1c9475b3aae943fbbc--materialy-dlya-tvorchestva-fotofon-doski-svetlye-40h40-sm.jpg">
-        </div>
         <div class="text-container">
            <h1>Pykhova A. - CV</h1> 
            <img src="src/IUntB6BNuHY.jpg" alt="Photo">
@@ -38,6 +35,7 @@
            </div>
         </div>
     </section>
-    <footer><a href="https://github.com/TsuShinra/">GitHub : TsuShinra</a>, 2021, <img class="rs-logo" src="src/rs_school_js.svg"><a href="https://rs.school/js/">JavaScript/Front-end</a> </footer> 
+    <footer>
+        <div class = "footer-div"><a href="https://github.com/TsuShinra/">GitHub : TsuShinra</a>Created in 2021 <div><img class="rs-logo" src="src/rs_school_js.svg"><a href="https://rs.school/js/">JavaScript/Front-end</a></div> </div></footer>
 </body>
 </html>
