feat: added fontawesome

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="src/fontawesome/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <title>Pykhova A. CV</title>
 </head>
@@ -10,7 +11,10 @@
     <div class="main-wrapper">
         <header>
             <div class="header-wrapper">
-                <div class="name"></div>
+                <div class="name">
+                    <h3>Alisa Pykhova</h3>
+                    <h6>Juniour Front-end Developer</h6>
+                </div>
                 <nav class="navigation">
                     <ul class="main-nav">
                         <li>Introduction</li>
@@ -25,7 +29,20 @@
             </div>
         </header>
         <main>
-            <aside></aside>
+            <aside>
+                <figure class="photo">
+                    <img src="./src/img/Photo_me.jpg" alt="there should be a photo">
+                </figure>
+                <article class="contacts">
+                    <ul class="c-line">
+                        <li><i class="fab fa-skype"></i></li>
+                        <li><i class="fab fa-discord"></i></li>
+                        <li><i class="fab fa-telegram"></i></li>
+                        <li><i class="fas fa-at"></i></li>
+                    </ul>
+                </article>
+                <article class="skills"></article>
+            </aside>
             <section class="introduct"></section>
             <section class="exp"></section>
             <section class="edu"></section>
@@ -33,7 +50,7 @@
             <section class="lang"></section>
         </main>
         <footer>
-            <div class = "footer-div"><a href="https://github.com/TsuShinra/">GitHub : TsuShinra</a>Created in 2021 <div><img class="rs-logo" src="src/rs_school_js.svg"><a href="https://rs.school/js/">JavaScript/Front-end</a></div> </div></footer>
+            <div class = "footer-div"><a href="https://github.com/TsuShinra/"><i class="fab fa-github"></i> TsuShinra</a>Created in 2021 <div><img class="rs-logo" src="src/img/rs_school_js.svg"><a href="https://rs.school/js/">JavaScript/Front-end</a></div> </div></footer>
         </div>
 </body>
 </html>
