--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <section class="code">
                         <h3 id="codeex">Code Example</h3>
                         <article>
-    
+
                             <h5>Codewars: The wheat/rice and chessboard problem</h5>
                             <pre><code>
     function squaresNeeded(grains) {
@@ -112,12 +112,17 @@
                 </div>
             </div>
         </main>
-    <footer>
-        <div class="footer-div"><a href="https://github.com/TsuShinra/"><i class="fab fa-github"></i>
-                TsuShinra</a>Created in 2021 <div><img class="rs-logo" src="src/img/rs_school_js.svg"><a
-                    href="https://rs.school/js/">JavaScript/Front-end</a></div>
-        </div>
-    </footer>
+        <footer>
+            <div class="footer-div">
+                <div class="foot1"><a href="https://github.com/TsuShinra/"><i class="fab fa-github"></i>
+                        TsuShinra</a></div>
+                <div class="foor2">Created in 2021</div>
+                <div>
+                    <img class="rs-logo" src="src/img/rs_school_js.svg">
+                    <a href="https://rs.school/js/">JavaScript/Front-end</a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
