--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="main-wrapper">
         <header>
             <div class="header-wrapper">
-                <nav class="navigation">
+                <div class="header__burger">
+                    <span> </span>
+                </div>
+                <nav class="menu">
                     <ul class="main-nav">
                         <li><a href="#intro">Introduction</a></li>
                         <li><a href="#skills">Skills</a></li>
@@ -124,6 +127,8 @@
             </div>
         </footer>
     </div>
+    <script src="https://yastatic.net/jquery/3.3.1/jquery.min.js"></script>
+    <script src="cv.js"></script> 
 </body>
 
 </html>
