fix: fixed burger menu partially

--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
 
 <body>
     <div class="main-wrapper">
-        <header>
+        <header class="header">
             <div class="header-wrapper">
-                <div class="header__burger">
-                    <span> </span>
-                </div>
                 <nav class="menu">
-                    <ul class="main-nav">
+                    <ul class="list">
                         <li><a href="#intro">Introduction</a></li>
                         <li><a href="#skills">Skills</a></li>
                         <li><a href="#exp">Experience</a></li>
@@ -32,6 +29,9 @@
                         <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
+                <div class="header__burger">
+                    <span> </span>
+                </div>
             </div>
         </header>
         <main>
