fix: fixed ancor links

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <nav class="menu">
                     <ul class="list">
                         <li><a href="#intro">Introduction</a></li>
-                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#exp">Experience</a></li>
                         <li><a href="#edu">Education</a></li>
                         <li><a href="#codeex">Code-example</a></li>
                         <li><a href="#lang">Languages spoken</a></li>
+                        <li><a href="#skills">Skills</a></li>
                         <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
@@ -36,15 +36,16 @@
         </header>
         <main>
             <div class="wrapper">
-                <aside>
+                <aside class="right-block">
                     <div class="name">
                         <h2>Alisa Pykhova</h2>
                         <h5>Juniour Front-end Developer</h5>
                     </div>
-                    <figure>
+                    <figure class="photo-block">
                         <img src="./src/img/Photo_me.jpg" alt="there should be a photo" class="photo">
                     </figure>
-                    <article class="contacts" id="contacts">
+                    <article class="contacts">
+                        <a id="contacts" class="anchor100"></a>
                         <ul class="c-line">
                             <li><i class="fab fa-skype"></i> : Tsumiri</li>
                             <li><i class="fab fa-discord"></i> : AlissaP#0957</li>
@@ -53,7 +54,8 @@
                         </ul>
                     </article>
                     <article class="skills">
-                        <h4 id="skills">Skills:</h4>
+                        <a id="skills" class="anchor100"></a>
+                        <h4>Skills:</h4>
                         <ul class="sk">
                             <li>HTML CSS</li>
                             <li>JavaScript</li>
@@ -65,30 +67,34 @@
                 </aside>
                 <div class="main-block">
                     <section class="introduct">
-                        <h3 id="intro">Introduction</h3>
-                        <article>Last year I've desided that there is a need for change,
+                        <a id="intro" class="anchor100"></a>
+                        <h3>Introduction</h3>
+                        <p>Last year I've desided that there is a need for change,
                             so I chose to take a new step and become a Front-End developer.
                             This is what amuses me in front-end: you can see the result of your
                             work as soon as you fix or change it. Although my Back-End
                             developer-friends say that 'moving pixels' around is quite boring,
                             I am never bored with this process. It encourages me to learn more
-                            and more every day.</article>
+                            and more every day.</p>
                     </section>
-                    <section class="exp">
-                        <h3 id="exp">Experience</h3>
-                        <article>HTML course project and several layouts I did for fun for my hobby projects.</article>
+                    <section class="exp2">
+                        <a  id="exp" class="anchor100"></a>
+                        <h3>Experience</h3>
+                        <p>HTML course project and several layouts I did for fun for my hobby projects.</p>
                     </section>
                     <section class="edu">
-                        <h3 id="edu">Education</h3>
-                        <article>Got admitted to Faculty of Computational Mathematics and Cybernetics
+                        <a  id="edu" class="anchor100"></a>
+                        <h3>Education</h3>
+                        <p>Got admitted to Faculty of Computational Mathematics and Cybernetics
                             in 2003, dropped after 1 year, transfering to Sociology faculty, which I
                             succesfully graduated in 2009. After that was working mainly in
                             localization industry, in LogrusIT LLC. Now I plan to move on and return
-                            to my long-forgotten programming dreams.</article>
+                            to my long-forgotten programming dreams.</p>
                     </section>
                     <section class="code">
-                        <h3 id="codeex">Code Example</h3>
-                        <article>
+                        <a id="codeex" class="anchor100"></a>
+                        <h3>Code Example</h3>
+                        <p>
 
                             <h5>Codewars: The wheat/rice and chessboard problem</h5>
                             <pre><code>
@@ -105,12 +111,13 @@
                         </article>
                     </section>
                     <section class="lang">
-                        <h3 id="lang">Languages</h3>
-                        <article>English is my main spoken language at work nowadays, so I'm
+                        <a id="lang" class="anchor100"></a>
+                        <h3>Languages</h3>
+                        <p>English is my main spoken language at work nowadays, so I'm
                             a frequent and confident user, probably the level is C1, but I
                             never took any tests after University, as there was no need. I also
                             speak and understand basic French (B1), and have basic knowledge of
-                            Spanish and Korean languages.</article>
+                            Spanish and Korean languages.</p>
                     </section>
                 </div>
             </div>
