fix: trying to fix code coloring on gh-pages

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/fontawesome/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
-    <script src='http://yastatic.net/highlightjs/8.2/highlight.min.js' />
-    </script>
-    <script type='text/javascript'>
-        hljs.initHighlightingOnLoad();
-    </script>
     <link href='http://yastatic.net/highlightjs/8.2/styles/solarized_light.min.css' rel='stylesheet' />
 </head>
 
@@ -98,6 +93,8 @@
 
                             <h5>Codewars: The wheat/rice and chessboard problem</h5>
                             <pre><code>
+                                <script src='http://yastatic.net/highlightjs/8.2/highlight.min.js'/></script>
+                                <script type='text/javascript'>hljs.initHighlightingOnLoad();</script>
     function squaresNeeded(grains) {
         const arr = [0];
         for (let i = 0; i < 63; i++) {
@@ -108,6 +105,10 @@
                 return i-1}
         }
     }</code></pre>
+                            <br>
+                            <a href="https://github.com/TsuShinra/html_course_1/">First HTML Layout attempt; </a>
+                            <br>
+                            <a href="https://github.com/TsuShinra/Test_project_for_Leonid/">Tiny flutter test project;</a>
                         </article>
                     </section>
                     <section class="lang">
