--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Pykhova A. CV</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="src/fontawesome/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -43,6 +44,7 @@
                     </figure>
                     <article class="contacts">
                         <a id="contacts" class="anchor100"></a>
+                        <h4>Contacts:</h4>
                         <ul class="c-line">
                             <li><i class="fab fa-skype"></i> : Tsumiri</li>
                             <li><i class="fab fa-discord"></i> : AlissaP#0957</li>
@@ -123,7 +125,7 @@
                             <br>
                             <a href="https://github.com/TsuShinra/Test_project_for_Leonid/">Tiny flutter test
                                 project;</a>
-                            </article>
+                            </p>
                     </section>
                     <section class="lang">
                         <a id="lang" class="anchor100"></a>
@@ -143,7 +145,7 @@
                         TsuShinra</a></div>
                 <div class="foor2">Created in 2021</div>
                 <div>
-                    <img class="rs-logo" src="src/img/rs_school_js.svg">
+                    <img class="rs-logo" src="src/img/rs_school_js.svg" alt="rsschool-logo">
                     <a href="https://rs.school/js/">JavaScript/Front-end</a>
                 </div>
             </div>
