feat: added some details and console.log

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                     <section class="introduct">
                         <a id="intro" class="anchor100"></a>
                         <h3>Introduction</h3>
+                        <p>One thing you need to know first: </p>
+                        <h5>I'M IN NO WAY A DESIGNER. NO NO NO NO.</h5>
+                        <p>Now, that I have your attention, let me start:</p>    
                         <p>Last year I've desided that there is a need for change,
                             so I chose to take a new step and become a Front-End developer.
                             This is what amuses me in front-end: you can see the result of your
@@ -121,11 +124,11 @@
         }
     }</code></pre> -->
                             <br>
-                            <a href="https://github.com/TsuShinra/html_course_1/">First HTML Layout attempt; </a>
-                            <br>
-                            <a href="https://github.com/TsuShinra/Test_project_for_Leonid/">Tiny flutter test
+                            <a href="https://github.com/TsuShinra/html_course_1/" target="_blank">First HTML Layout attempt; </a>
+                            <p> This one I did while learning HTML and CSS. Pure and simple.</p>
+                            <a href="https://github.com/TsuShinra/Test_project_for_Leonid/" target="_blank">Tiny flutter test
                                 project;</a>
-                            </p>
+                            <p>I like Flutter, It is new, simple and enables multi-platform coding. This one was for a test project. Turned out to be too "green" to be a youngling. :) </p>
                     </section>
                     <section class="lang">
                         <a id="lang" class="anchor100"></a>
