fix: updated it up to date

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p>Got admitted to Faculty of Computational Mathematics and Cybernetics
                             in 2003, dropped after 1 year, transfering to Sociology faculty, which I
                             succesfully graduated in 2009. After that was working mainly in
-                            localization industry, in LogrusIT LLC. Now I plan to move on and return
+                            localization industry. Now I plan to move on and return
                             to my long-forgotten programming dreams.</p>
                     </section>
                     <section class="code">
@@ -146,7 +146,7 @@
             <div class="footer-div">
                 <div class="foot1"><a href="https://github.com/TsuShinra/"><i class="fab fa-github"></i>
                         TsuShinra</a></div>
-                <div class="foor2">Created in 2021</div>
+                <div class="foor2">Created in 2021, altered in 2022</div>
                 <div>
                     <img class="rs-logo" src="src/img/rs_school_js.svg" alt="rsschool-logo">
                     <a href="https://rs.school/js/">JavaScript/Front-end</a>
